syntax="proto3";

package proto;

option go_package = "cchoice/pb";

message SettingsByNamesRequest {
   repeated string names = 1;
}

message SettingsResponse {
   int64 length = 1;
   map<string, string> settings = 2;
}

service SettingsService {
   rpc GetSettingsByNames(SettingsByNamesRequest) returns (SettingsResponse) {}
}
